--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Calculator</title>
   </head>
   <body>
     <h1>Calculator</h1>
+    <div class="calculator">
+      <div class="display">12345</div>
+      <div class="buttons">
+        <button class="num-btn" id="9">9</button>
+        <button class="num-btn" id="8">8</button
+        ><button class="num-btn" id="7">7</button>
+        <button class="num-btn" id="6">6</button
+        ><button class="num-btn" id="5">5</button>
+        <button class="num-btn" id="4">4</button
+        ><button class="num-btn" id="3">3</button>
+        <button class="num-btn" id="2">2</button
+        ><button class="num-btn" id="1">1</button>
+        <button class="num-btn" id="0">0</button>
+      </div>
+    </div>
   </body>
 </html>
