Add backspace logic and UI

--- a/index.html
+++ b/index.html
@@ -12,29 +12,33 @@
     <div class="calculator">
       <div class="display"></div>
       <div class="buttons">
-        <div class="first-row btn-row">
+        <div class="top-row btn-row">
+          <button class="clear-btn" id="clear">C</button>
+          <button class="del-btn" id="del">Back</button>
+          <button class="op-btn" id="divide">/</button>
+        </div>
+        <div class="second-row btn-row">
           <button class="num-btn" id="7">7</button>
           <button class="num-btn" id="8">8</button
           ><button class="num-btn" id="9">9</button>
-          <button class="op-btn" id="plus">+</button>
+          <button class="op-btn" id="multiply">X</button>
         </div>
-        <div class="second-row btn-row">
+        <div class="third-row btn-row">
           <button class="num-btn" id="4">4</button
           ><button class="num-btn" id="5">5</button>
           <button class="num-btn" id="6">6</button>
           <button class="op-btn" id="minus">-</button>
         </div>
-        <div class="third-row btn-row">
+        <div class="fourth-row btn-row">
           <button class="num-btn" id="1">1</button>
           <button class="num-btn" id="2">2</button
           ><button class="num-btn" id="3">3</button>
-          <button class="op-btn" id="multiply">X</button>
+          <button class="op-btn" id="plus">+</button>
         </div>
-        <div class="fourth-row btn-row">
-          <button class="num-btn" id="0">0</button>
-          <button class="clear-btn" id="clear">C</button>
+        <div class="last-row btn-row">
+          <button class="num-btn" id="zero">0</button>
+          <button class="decimal-btn" id="decimal">.</button>
           <button class="eq-btn" id="eq">=</button>
-          <button class="op-btn" id="divide">/</button>
         </div>
       </div>
     </div>
